# Door_Signs

./: Door_Sign_Script_General.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
door_sign_generation.egg-info/: PKG-INFO  SOURCES.txt
door_signs_script/: __init__.py
door_signs_script.egg-info/: PKG-INFO  SOURCES.txt
src/door_signs_script/: Door_Sign_Script_General.py
tests/: instructions.txt
tests/input/: MSD_Lab_Safety_DB.xlsx  QueryResult.csv  input_instructions.txt
